@@ -1,7 +1,7 @@
 
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!DOCTYPE admst SYSTEM "admst.dtd">
-<admst version="2.2.2" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
+<admst version="2.3.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
 
 <admst:variable name="pprobe"/>
 <admst:variable name="qprobe"/>
