@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.13  2007-05-11 07:19:58  r29173
+  Revision 1.14  2011-01-13 17:05:46  dwarning
+  set version parameter to 2.3.0
+
+  Revision 1.13  2007/05/11 07:19:58  r29173
   added support to 'div' builtin function
 
   Revision 1.12  2007/05/07 09:01:18  r29173
@@ -65,7 +68,7 @@
 -->
 
 <!DOCTYPE admst SYSTEM "admst.dtd">
-<admst version="2.2.6" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
+<admst version="2.3.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
 
 <!-- expression//function: mapping verilog-name == C-name of function -->
 <admst:template match="fname">
