@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.6  2006-03-05 09:38:41  pnenzi
+  Revision 1.7  2011-01-13 17:05:46  dwarning
+  set version parameter to 2.3.0
+
+  Revision 1.6  2006/03/05 09:38:41  pnenzi
 
   Updated version to 2.2.0
 
@@ -49,7 +52,7 @@
 -->
 
 <!DOCTYPE admst SYSTEM "admst.dtd">
-<admst version="2.2.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
+<admst version="2.3.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
 <admst:template match="code">
 #include "config.h"
 
