@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.5  2007-04-24 08:59:09  r29173
+  Revision 1.6  2011-01-13 17:05:46  dwarning
+  set version parameter to 2.3.0
+
+  Revision 1.5  2007/04/24 08:59:09  r29173
   added missing new lines (due to changes in adms225)
   renamed pspva to psp102
 
@@ -45,7 +48,7 @@
 -->
 
 <!DOCTYPE admst SYSTEM "admst.dtd">
-<admst version="2.2.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
+<admst version="2.3.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
 <admst:template match="code">
 <admst:value-of select="attribute[name='ngspicename']/value"/>
 <admst:variable name="module" select="%s"/>
