@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.8  2007-07-05 09:44:11  r29173
+  Revision 1.9  2011-01-13 17:05:46  dwarning
+  set version parameter to 2.3.0
+
+  Revision 1.8  2007/07/05 09:44:11  r29173
   added new evaluate function (support of ddx operator used inside contribs)
 
   Revision 1.7  2007/05/05 21:11:46  dwarning
@@ -55,7 +58,7 @@
 -->
 
 <!DOCTYPE admst SYSTEM "admst.dtd">
-<admst version="2.2.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
+<admst version="2.3.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
 
 <admst:template match="dectype">
   <admst:choose>
