@@ -4,7 +4,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.1  2006-03-10 09:55:53  pnenzi
+  Revision 1.2  2011-01-13 17:05:46  dwarning
+  set version parameter to 2.3.0
+
+  Revision 1.1  2006/03/10 09:55:53  pnenzi
 
   Truncation error calculation.
 
@@ -32,7 +35,7 @@
 -->
 
 <!DOCTYPE admst SYSTEM "admst.dtd">
-<admst version="2.2.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
+<admst version="2.3.0" xmlns:admst="http://mot-adms.sourceforge.net/xml-files/admst">
 
 <admst:template match="dectype">
   <admst:choose>
